Sat Mar 29 16:59:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix some "foo if bar" constructions
	  which broken python2.4.  Should now work with python 2.4 again.

Wed Mar 26 08:14:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Tidy up the imports in this file, too.

Wed Mar 26 07:52:47 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/datastructures.py,
	  xappy/indexerconnection.py: Remove several "import *" lines from
	  __init__.py, replacing them by importing the specific symbols
	  desired.  Remove the nasty renaming of imported symbols in the
	  files thus imported, since this was to work around polluting the
	  namespace when "import *" was used.

Tue Mar 25 12:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_query_type_1.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: More facet selection improvements from
	  Tom Winch: allow a set of associations between query types and
	  facets to be stored in the database configuration, and use these
	  facets to either prevent or prefer certain facets from being
	  chosen for a particular query type.  (Query types are specified
	  by an additional parameter to the search() method.)

Wed Mar 19 01:42:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Remove
	  backwards compatibility support for reading fieldactions from a
	  file.  It just makes the code more complex, and xappy really
	  needs to use a more recent version of xapian.

Tue Mar 18 21:34:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add Tom Winch.

Tue Mar 18 21:29:25 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_hierarchy_1.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Add support for defining a facet