@@ -1,3 +1,9 @@
+Thu Apr 17 22:04:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,xappy/fieldactions.py,
+	  xappy/searchconnection.py: Add allow_field_specific and
+	  search_by_default flags to INDEX_FREETEXT action.
+
 Sat Mar 29 16:59:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Fix some "foo if bar" constructions
